# tauri-template-w7

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: build.yaml
src/: App.css  App.vue  main.ts  runtime-error.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
